# jellyfin-desktop

./: .gitignore  flake.nix  merged.md  renovate.json
.github/workflows/: build-nix.yml  cef-nix-sync-in-pr.yml  cef-nix-sync.yml  sync-upstream.yml  update-flake-lock.yml
dev/linux/flatpak/: build.sh
dev/nix/flake/: systems.nix
dev/nix/home/: _settings.json  default.nix
dev/nix/package/: _package.nix  _updated-cef-binary.nix  default.nix
dev/nix/package/_packages/: cef-binary.nix  cef-lib.nix  jellyfin-desktop.nix  jellyfin-desktop_crane-deps.nix  jellyfin-desktop_crane.nix  jellyfin-desktop_last_good_niri.nix  jellyfin-desktop_resources.nix  mpv-external-prefix.nix  update-cef.sh
src/: Cargo.toml  clippy.toml
src/config/: Cargo.toml
src/config/src/: lib.rs
src/gpu_paint/: Cargo.toml
src/jfn_rust/: Cargo.toml
src/jfn_rust/src/: app.rs  cli.rs  lib.rs  platform_install.rs
src/linux_util/src/: lib.rs
src/platform_abi/src/: lib.rs  mpv_host.rs
src/playback/src/: ingest_driver.rs
src/wayland/: Cargo.toml
src/wayland/src/: app_conn.rs  gpu_paint_worker.rs  input.rs  kde_palette.rs  lib.rs  lifecycle.rs  make_platform.rs  mpv_host.rs  mpv_proxy.rs  popup.rs  root_window.rs  shm_paint_worker.rs  window_source.rs  window_state.rs  wl_ffi.rs  wl_ops.rs  wl_state.rs  wlproxy_host.rs
src/wayland/src/scene/: mod.rs  sink.rs
src/wlproxy/: Cargo.toml
src/wlproxy/src/: lib.rs
