[package]
name = "jfn-config"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
name = "jfn_config"
crate-type = ["rlib"]

[dependencies]
jfn-paths = { path = "../paths" }
jfn-platform-abi = { path = "../platform_abi" }
parking_lot.workspace = true
schemars = "1.2.1"
serde_json = { workspace = true, features = ["preserve_order"] }

[target.'cfg(unix)'.dependencies]
libc.workspace = true

[lints]
workspace = true
