[package]
name = "jfn-rust"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
name = "jfn_rust"
crate-type = ["rlib"]

[[bin]]
name = "jellyfin-desktop"
path = "src/main.rs"

[features]
default = ["kde-palette"]
kde-palette = ["jfn-wayland/kde-palette"]

[dependencies]
tracing.workspace = true
parking_lot.workspace = true
serde_json.workspace = true
uuid = { version = "1", features = ["v4"] }
clap = { version = "4", default-features = false, features = ["std", "derive", "error-context", "help", "usage", "suggestions", "env"] }
jfn-platform-abi = { path = "../platform_abi" }
jfn-cef = { path = "../jfn_cef", default-features = false }
jfn-color = { path = "../color" }
jfn-config = { path = "../config" }
jfn-jellyfin = { path = "../jellyfin" }
jfn-logging = { path = "../logging" }
jfn-mpv = { path = "../mpv" }
jfn-paths = { path = "../paths" }
jfn-playback = { path = "../playback" }
jfn-wake-event = { path = "../wake_event" }

[target.'cfg(unix)'.dependencies]
libc.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
jfn-macos = { path = "../macos" }

[target.'cfg(target_os = "windows")'.dependencies]
jfn-windows = { path = "../windows" }

[target.'cfg(target_os = "windows")'.build-dependencies]
embed-resource = "3"
gix = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
jfn-linux-util = { path = "../linux_util" }
jfn-wayland = { path = "../wayland", default-features = false }
jfn-x11 = { path = "../x11" }

[lints]
workspace = true
