[package]
name = "jfn-wayland"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
name = "jfn_wayland"
crate-type = ["rlib"]

[features]
default = ["kde-palette"]
kde-palette = ["dep:wayland-protocols-plasma"]

[dependencies]
parking_lot.workspace = true

# The whole crate is `#![cfg(target_os = "linux")]`, so it's an empty rlib
# elsewhere and the workspace builds uniformly on every platform.
[target.'cfg(target_os = "linux")'.dependencies]
jfn-gpu-paint = { path = "../gpu_paint" }
jfn-input = { path = "../input" }
jfn-linux-util = { path = "../linux_util" }
jfn-platform-abi = { path = "../platform_abi" }
jfn-menu = { path = "../menu" }
jfn-mpris = { path = "../mpris" }
jfn-mpv = { path = "../mpv" }
jfn-playback = { path = "../playback" }
jfn-wlproxy = { path = "../wlproxy" }
cef.workspace = true
libc.workspace = true
libloading = "0.9"
memmap2 = "0.9"
tracing.workspace = true
smithay-client-toolkit = { version = "0.20", default-features = false }
wayland-backend = { version = "0.3", features = ["client_system"] }
wayland-client = "0.31"
wayland-protocols = { version = "0.32", features = ["client", "staging", "unstable"] }
wayland-protocols-plasma = { version = "0.3", features = ["client"], optional = true }
wayland-scanner = "0.31"
xkbcommon = "0.9"

[lints]
workspace = true
