[package]
name = "jfn-wlproxy"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
name = "jfn_wlproxy"
crate-type = ["rlib"]

[dependencies]
parking_lot.workspace = true

# wl-proxy bundles the Wayland protocol machinery and only builds on Linux;
# the whole crate is `#![cfg(target_os = "linux")]`, so it's an empty rlib
# elsewhere and the workspace builds uniformly on every platform.
[target.'cfg(target_os = "linux")'.dependencies]
wl-proxy = { version = "0.1.3", features = ["all-protocols"] }
error_reporter = "1.0.0"
libc.workspace = true

[lints]
workspace = true
